--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="pl" dir="ltr" id="index">
   <head>
     <meta charset="UTF-8" />
-    <title> Tytuł strony </title>
+    <title> Page title </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <link rel="stylesheet" href="css/style.css" type="text/css" />
   </head>
   
   <body>
-  
+    <header>
+      <h1> <a href="index.html"> Lorem Ipsum </a> </h1>
+    </header>
   </body>
 </html>
