--- a/index.html
+++ b/index.html
@@ -11,5 +11,16 @@
     <header>
       <h1> <a href="index.html"> Lorem Ipsum </a> </h1>
     </header>
+    <article>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id fermentum massa. Curabitur scelerisque pulvinar feugiat. In non aliquet odio, ac eleifend lacus. Nam blandit risus ut iaculis molestie. Praesent semper augue vitae consequat posuere. Nulla dictum, ante quis aliquet venenatis, magna tellus commodo ligula, eget aliquam sem quam aliquet nunc. Pellentesque at eros a purus tincidunt varius et a sapien. Phasellus pharetra facilisis cursus. Integer mi nisi, venenatis a nisl bibendum, eleifend mollis mi. Fusce pellentesque, lacus quis vehicula congue, nunc dolor dignissim nisi, vel lacinia lectus tortor nec risus. In rhoncus quam purus. Sed semper purus ut dui tristique, quis consequat sapien mattis.
+      </p> 
+      <p>
+        Cras faucibus, nisl ut sollicitudin lobortis, ante nunc blandit tellus, in fringilla enim arcu auctor erat. Aenean nec sapien vel neque consectetur rhoncus. Sed mollis, justo sit amet luctus ultrices, diam dui auctor justo, vel aliquet purus tellus sit amet libero. Fusce congue, nisi et sagittis volutpat, dui risus pulvinar purus, ac convallis sapien ante vitae velit. Nullam pretium placerat laoreet. Vestibulum suscipit ex laoreet, facilisis ipsum non, luctus dui. Nullam sed purus felis. Duis convallis interdum tortor. Nam eu lobortis risus. Ut eget tempus nibh, hendrerit aliquam ante. Nam auctor malesuada eros, id pretium metus rutrum id. Nam massa odio, interdum vitae elementum eget, vestibulum vel arcu. Suspendisse potenti. Vestibulum vitae justo sem.
+      </p>  
+      <p>
+        Vivamus a nisl fermentum, maximus justo id, interdum odio. Nunc at mauris vel orci pharetra tempus ut sit amet nunc. Suspendisse potenti. Etiam commodo velit vitae purus porttitor sollicitudin. Suspendisse erat tellus, luctus vitae auctor quis, dignissim eu justo. Pellentesque a blandit purus, in cursus nisl. Nam pretium dolor vitae nulla efficitur congue. Sed elementum sed nisl ut porta. Nunc nec finibus lacus. Aenean sit amet convallis tortor. Proin efficitur fermentum ex. Ut fermentum gravida nunc mollis tristique. Sed posuere ut est ac rutrum. Aenean eget dictum massa.
+      </p>
+    </article>
   </body>
 </html>
