--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl" dir="ltr" id="index">
   <head>
     <meta charset="UTF-8" />
-    <title> Page title </title>
+    <title> Page test </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
     <link rel="stylesheet" href="css/style.css" type="text/css" />
   </head>
@@ -21,6 +21,8 @@
       <p>
         Vivamus a nisl fermentum, maximus justo id, interdum odio. Nunc at mauris vel orci pharetra tempus ut sit amet nunc. Suspendisse potenti. Etiam commodo velit vitae purus porttitor sollicitudin. Suspendisse erat tellus, luctus vitae auctor quis, dignissim eu justo. Pellentesque a blandit purus, in cursus nisl. Nam pretium dolor vitae nulla efficitur congue. Sed elementum sed nisl ut porta. Nunc nec finibus lacus. Aenean sit amet convallis tortor. Proin efficitur fermentum ex. Ut fermentum gravida nunc mollis tristique. Sed posuere ut est ac rutrum. Aenean eget dictum massa.
       </p>
+      
+      <p> Test Test 2 test test 2 </p>
     </article>
     <footer>
       <p> &copy; Copyright by Lipsum Generator </p>
